Fixes extra whitespace on right of the website (#26)

--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,12 @@
 }
 html,
 body {
-	position: relative;
+	width: 100%;
 	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
+	position: relative;
 }
 body {
 	color: #444349;
